# metis

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
app/: main.py
app/routers/: __init__.py  base.py  mnist.py  predict.py
app/vision/: mnist.py
src/diffusion/: train.py
src/general/utils/models/: __init__.py  cnn.py
src/gymnasium/: train-0.py  train-1.py  train-2.py  train.py
src/gymnasium/models/: model.pt
src/mnist/: train.py
src/reinforcement_learning/: train.py
src/support_vector_machine/: train.py
static/mnist/: index.html  script.js  styles.css
tests/: conftest.py
tests/app/: test_base.py  test_mnist.py  test_predict.py
tests/data/: mnist_two_image.txt
